[package]
name = "bmi-rs-sys"
version = "0.0.1"
edition = "2024"

description = "Bindgen bindings for the CSDMS Basic Model Interface (BMI)"
readme = "../README.md"
authors = ["Austin Raney <araney@lynker.com>"]
license = "MIT"

homepage = "https://github.com/aaraney/bmi-rs"

build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.71.0"
