[package]
name = "bmi-rs"
version = "0.0.1-alpha.0"
edition = "2024"

description = "Library for exposing numerical models over the CSDMS Basic Model Interface (BMI)."
readme = "../README.md"
authors = ["Austin Raney <araney@lynker.com>"]
license = "MIT"

homepage = "https://github.com/aaraney/bmi-rs"
repository = "https://github.com/aaraney/bmi-rs"

[features]
compat = []

[dependencies]
ffi = { path = "../bmi-rs-sys", package = "bmi-rs-sys", version = "0.0.1" }
